--- a/app/templates/admin/manage_user.html
+++ b/app/templates/admin/manage_user.html
@@ -7,6 +7,7 @@
     ('admin.user_info', 'User information'),
     ('admin.change_user_email', 'Change email address'),
     ('admin.change_account_type', 'Change account type'),
+    ('admin.admin_check', 'Confirm user'),
     (deletion_endpoint, 'Delete user')
 ] %}
 
