--- a/app/static/styles/app.css
+++ b/app/static/styles/app.css
@@ -29,87 +29,87 @@ table.selectable tr:hover {
   display: none;
 }
 
-@media -sass-debug-info{filename{}line{font-family:\0000338}}
+@media -sass-debug-info{filename{}line{font-family:\0000339}}
 .pusher .masthead.segment {
   min-height: 700px;
   padding: 1em 0em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000342}}
+@media -sass-debug-info{filename{}line{font-family:\0000343}}
 .pusher .masthead .logo.item img {
   margin-right: 1em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000345}}
+@media -sass-debug-info{filename{}line{font-family:\0000346}}
 .pusher .masthead .ui.menu .ui.button {
   margin-left: 0.5em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000348}}
+@media -sass-debug-info{filename{}line{font-family:\0000349}}
 .pusher .masthead h1.ui.header {
   margin-top: 3em;
   margin-bottom: 0em;
   font-size: 4em;
   font-weight: normal;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000354}}
+@media -sass-debug-info{filename{}line{font-family:\0000355}}
 .pusher .masthead h2 {
   font-size: 1.7em;
   font-weight: normal;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000359}}
+@media -sass-debug-info{filename{}line{font-family:\0000360}}
 .pusher .ui.vertical.stripe {
   padding: 8em 0em 4em 0em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000362}}
+@media -sass-debug-info{filename{}line{font-family:\0000363}}
 .pusher .ui.vertical.stripe h3 {
   font-size: 2em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000365}}
+@media -sass-debug-info{filename{}line{font-family:\0000366}}
 .pusher .ui.vertical.stripe .button + h3,
 .pusher .ui.vertical.stripe p + h3 {
   margin-top: 3em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000369}}
+@media -sass-debug-info{filename{}line{font-family:\0000370}}
 .pusher .ui.vertical.stripe .floated.image {
   clear: both;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000372}}
+@media -sass-debug-info{filename{}line{font-family:\0000373}}
 .pusher .ui.vertical.stripe p {
   font-size: 1.33em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000375}}
+@media -sass-debug-info{filename{}line{font-family:\0000376}}
 .pusher .ui.vertical.stripe .horizontal.divider {
   margin: 3em 0em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000379}}
+@media -sass-debug-info{filename{}line{font-family:\0000380}}
 .pusher .quote.stripe.segment {
   padding: 0em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000382}}
+@media -sass-debug-info{filename{}line{font-family:\0000383}}
 .pusher .quote.stripe.segment .grid .column {
   padding-top: 5em;
   padding-bottom: 5em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000387}}
+@media -sass-debug-info{filename{}line{font-family:\0000388}}
 .pusher .footer.segment {
   padding: 5em 0em;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000391}}
+@media -sass-debug-info{filename{}line{font-family:\0000392}}
 .pusher .secondary.pointing.menu .toc.item {
   display: none;
 }
-@media -sass-debug-info{filename{}line{font-family:\0000395}}
+@media -sass-debug-info{filename{}line{font-family:\0000396}}
 .pusher .modal form {
   margin-top: 2em;
   margin-bottom: 2em;
 }
-@media -sass-debug-info{filename{}line{font-family:\00003100}}
+@media -sass-debug-info{filename{}line{font-family:\00003101}}
 .pusher .search-results {
   padding: 8em 0em 4em 0em;
 }
-@media -sass-debug-info{filename{}line{font-family:\00003103}}
+@media -sass-debug-info{filename{}line{font-family:\00003104}}
 .pusher .search-results .ui.items > .item > .content {
   margin-top: 1em;
 }
-@media -sass-debug-info{filename{}line{font-family:\00003106}}
+@media -sass-debug-info{filename{}line{font-family:\00003107}}
 .pusher .search-results .ui.sticky {
   margin-top: 60px !important;
   width: 272px !important;
@@ -117,31 +117,46 @@ table.selectable tr:hover {
   left: 283px;
 }
 @media only screen and (max-width: 700px) {
-@media -sass-debug-info{filename{}line{font-family:\00003114}}
+@media -sass-debug-info{filename{}line{font-family:\00003115}}
   .pusher .ui.fixed.menu {
     display: none !important;
   }
-@media -sass-debug-info{filename{}line{font-family:\00003117}}
+@media -sass-debug-info{filename{}line{font-family:\00003118}}
   .pusher .secondary.pointing.menu .item,
   .pusher .secondary.pointing.menu .menu {
     display: none;
   }
-@media -sass-debug-info{filename{}line{font-family:\00003121}}
+@media -sass-debug-info{filename{}line{font-family:\00003122}}
   .pusher .secondary.pointing.menu .toc.item {
     display: block;
   }
-@media -sass-debug-info{filename{}line{font-family:\00003124}}
+@media -sass-debug-info{filename{}line{font-family:\00003125}}
   .pusher .masthead.segment {
     min-height: 350px;
   }
-@media -sass-debug-info{filename{}line{font-family:\00003127}}
+@media -sass-debug-info{filename{}line{font-family:\00003128}}
   .pusher .masthead h1.ui.header {
     font-size: 2em;
     margin-top: 1.5em;
   }
-@media -sass-debug-info{filename{}line{font-family:\00003131}}
+@media -sass-debug-info{filename{}line{font-family:\00003132}}
   .pusher .masthead h2 {
     margin-top: 0.5em;
     font-size: 1.5em;
   }
+}
+
+@media -sass-debug-info{filename{}line{font-family:\00003139}}
+.profile-pic {
+  max-height: 400px;
+}
+
+@media -sass-debug-info{filename{}line{font-family:\00003144}}
+.ui.label.user-tag {
+  margin-bottom: 10px;
+}
+
+@media -sass-debug-info{filename{}line{font-family:\00003148}}
+.user-info {
+  margin-bottom: 10px;
 }
