--- a/app/templates/account/profile.html
+++ b/app/templates/account/profile.html
@@ -55,18 +55,16 @@
       <div class="row">
         <div class="fourteen wide column stackable">
           <h2 class="ui header">Tags</h2>
-          <div class="ui label two wide user-tag">
-            Math/Science
-            <a href="/stuff" class="detail">214</a>
-          </div>
-          <div class="ui label two wide user-tag">
-            Middle School
-            <a href="/stuff" class="detail">214</a>
-          </div>
-          <div class="ui label two wide user-tag">
-            Disabled Students
-            <a href="/stuff" class="detail">214</a>
-          </div>
+          {% if user.tags|length == 0 %}
+            <p>{{ user.full_name() }} has no tags.</p>
+          {% else %}
+            {% for tag in user.tags %}
+              <div class="ui label two wide user-tag">
+                {{ tag.name }}
+                <a href="/stuff" class="detail">{{ tag.users|length }}</a>
+              </div>
+            {% endfor %}
+          {% endif %}
         </div>
       </div>
       <!--div class="row">
