--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -33,6 +33,10 @@
                                     description='Create a new user account', icon='add user icon') }}
                 {{ dashboard_option('Invite New User', 'admin.invite_user',
                                     description='Invites a new user to create their own account', icon='add user icon') }}
+                {{ dashboard_option('Tag Management', 'admin.registered_tags',
+                                    description='View and manage user tags', icon='tags icon') }}
+                {{ dashboard_option('Add New Tag', 'admin.new_tag',
+                                    description='Create a new tag', icon='tag icon') }}
             </div>
         </div>
     </div>
