--- a/app/templates/admin/new_user.html
+++ b/app/templates/admin/new_user.html
@@ -43,6 +43,8 @@
 
                 {% endif %}
 
+                {{ f.render_form_field(form.user_type) }}
+
                 {{ f.form_message(flashes['error'], header='Something went wrong.', class='error') }}
                 {{ f.form_message(flashes['warning'], header='Check your email.', class='warning') }}
                 {{ f.form_message(flashes['info'], header='Information', class='info') }}
