changed hometown to location, added default value in form input, prof pic in images

--- a/app/templates/account/edit_profile.html
+++ b/app/templates/account/edit_profile.html
@@ -23,7 +23,7 @@
                     {{ f.render_form_field(form.last_name) }}
                 </div>
 
-                {{ f.render_form_field(form.hometown) }}
+                {{ f.render_form_field(form.location) }}
 
                 {{ f.render_form_field(form.profile_pic) }}
 
